Desktop: green gradient on Continue Talking button, remove tick from Done

--- a/public/voice-session.html
+++ b/public/voice-session.html
@@ -1266,7 +1266,7 @@
             <div class="toolbar-timer" id="callTimer" style="display:none">00:00</div>
 
             <!-- Start voice button (toolbar version, hidden initially) -->
-            <button class="tb-text-btn" id="tbStartBtn" onclick="startCall()" style="display:none; background:var(--accent); color:white; border-color:var(--accent); box-shadow: 0 0 16px var(--accent-glow);">
+            <button class="tb-text-btn" id="tbStartBtn" onclick="startCall()" style="display:none; background:linear-gradient(145deg, #0a3d30, #06281f); color:#00ffcc; border-color:rgba(0,230,180,0.6); box-shadow: 0 0 20px rgba(0,230,180,0.25), 0 0 40px rgba(0,230,180,0.1);">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="width:14px;height:14px"><path d="M12 2a3 3 0 0 0-3 3v7a3 3 0 0 0 6 0V5a3 3 0 0 0-3-3Z"/><path d="M19 10v2a7 7 0 0 1-14 0v-2"/><line x1="12" x2="12" y1="19" y2="22"/></svg>
                 Continue Talking
             </button>
@@ -1305,7 +1305,6 @@
             <div class="toolbar-divider"></div>
 
             <button class="tb-text-btn complete" onclick="showCompleteModal()" title="Save and choose next step">
-                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 6 9 17l-5-5"/></svg>
                 Done
             </button>
         </div>
