--- a/public/voice-session.html
+++ b/public/voice-session.html
@@ -1114,6 +1114,23 @@
                 line-height: 1.5;
                 letter-spacing: 0.02em;
             }
+            .mobile-transcript-btn {
+                margin-top: 16px;
+                padding: 10px 28px;
+                border-radius: 24px;
+                border: 1px solid rgba(255,255,255,0.15);
+                background: rgba(255,255,255,0.06);
+                color: rgba(255,255,255,0.7);
+                font-size: 0.85rem;
+                font-weight: 500;
+                cursor: pointer;
+                transition: all 0.2s;
+                backdrop-filter: blur(8px);
+            }
+            .mobile-transcript-btn:active {
+                background: rgba(255,255,255,0.12);
+                color: #fff;
+            }
             .mobile-tabs {
                 display: flex !important;
                 position: fixed;
@@ -1383,6 +1400,7 @@
                     </div>
                     <div class="mobile-timer" id="mobileTimer">00:00</div>
                     <p class="mobile-hint" id="mobileHint">Tap to start talking</p>
+                    <button class="mobile-transcript-btn" onclick="switchMobileTab('chat')">💬 Transcript</button>
                 </div>
             </div>
 
